# jsolar

./: .clang-format  CMakeLists.txt  README.md
include/jsolar/: backing_data.h  class.h  jsolar.h  utility.h  wrapper.h
test/: CMakeLists.txt
test/jsolar/: jsolar_test.cpp
